<resources>
    <string name="app_name">Мое первое приложение</string>

    <string name="hello_world">Привет Андроид!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Введите сообщение</string>
    <string name="button_send">Отправить</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="second_windows">Second Windows</string>
    <string name="title_activity_second_act">Second_act</string>
    <string name="title_activity_third_act">Third_act</string>
    <string name="to_main">To main</string>
    <string name="message_to_marge">message_to_marge</string>
    <string name="link_phone">2-25-38</string>
    <string name="link_web">http://metanit.com/java/android/4.1.php</string>
    <string name="ru">ru</string>
    <string name="eng">eng</string>
    <string name="buttonSend">Отправить</string>
</resources>
