<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/button_send"
        android:textStyle="italic"
        android:shadowColor="@color/material_blue_grey_900"
        android:textColorHint="@color/red"
        android:onClick="sendMessage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/title_activity_second_act"
        android:onClick="second_act"></Button>
    <ImageView
        android:layout_width="52dp"
        android:layout_height="62dp"
        android:src="@drawable/layers"/>
    <TextView
        android:id="@+id/linkMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_phone"
        android:autoLink="phone"
        android:paddingBottom="30dp"
        android:paddingTop="30dp"
        android:paddingLeft="90dp"/>

    <TextView
        android:id="@+id/linkWeb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_web"
        android:autoLink="web"
        android:paddingLeft="10dp"/>
</LinearLayout>
